Fixed navbar toggler collapse, portfolio ready for use.

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
     font-weight:bold;
 }
 
-#about{
+#about {
     margin:60px auto;
     margin-top:32px;
     font-size:.15rem auto;
@@ -22,6 +22,12 @@ body{
     border-radius:50%;
     width:120px;
     margin-bottom:10px;
+}
+
+#about h5 {
+    font-size:.65rem;
+    width:80%;
+    margin:auto;
 }
 
 #about .name {
@@ -36,7 +42,8 @@ body{
 }
 #about .skillset{
     font-size: .5rem;
-    color:#00ABAE
+    color:#00ABAE;
+    margin-bottom:15px;
 }
 #about .contact1{
     font-size: .5rem;
@@ -49,4 +56,58 @@ body{
 }
 #about .bi-linkedin{
     padding:10px;
+}
+
+.font-black{
+    color:#000 !important
+}
+
+h2{
+    font-weight:bold;
+}
+
+#projects {
+    margin:60px auto;
+    margin-top:32px;
+    font-size:.15rem auto;
+    width:80%;
+    max-width:fit-content
+}
+#projects h2{
+    text-align: center;
+    margin-bottom:32px;
+}
+
+#projects .card img {
+    width:100%;
+}
+
+#projects .btn {
+    text-align:center;
+}
+
+#npweb {
+    background-color:#00ABAE;
+    color:#fff;
+}
+
+#npgit {
+    background-color:#000;
+    color:fff;
+    margin-left:10px;
+}
+
+#tweb {
+    background-color:#00ABAE;
+    color:#fff;
+}
+
+#tgit {
+    background-color:#000;
+    color:fff;
+    margin-left:10px;
+}
+
+.card-title {
+    font-weight:bold;
 }
